<resources>
    <string name="app_name">Shop</string>
    <string name="person_name">Name</string>
    <string name="sale">Sale -30%</string>
    <string name="select">Select Item</string>
    <string name="price">Order Price</string>
    <string name="dollars">$</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="add">Add Cart</string>
    <string name="description">Sale -30%</string>
    <string name="plate">Plate</string>
    <string name="hint">Your Name</string>
    <string name="order">Your Order</string>
    <string name="send_email">Send Email</string>
</resources>